# ChangeLog for net-libs/librpcsecgss
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/librpcsecgss/ChangeLog,v 1.22 2009/08/13 04:48:28 vapier Exp $

*librpcsecgss-0.19 (13 Aug 2009)

  13 Aug 2009; Mike Frysinger <vapier@gentoo.org> +librpcsecgss-0.19.ebuild:
  Version bump.

*librpcsecgss-0.18 (20 Apr 2008)

  20 Apr 2008; Mike Frysinger <vapier@gentoo.org> +librpcsecgss-0.18.ebuild:
  Version bump.

*librpcsecgss-0.17 (29 Dec 2007)

  29 Dec 2007; Mike Frysinger <vapier@gentoo.org> +librpcsecgss-0.17.ebuild:
  Version bump #196093 by Erik Logtenberg.

  12 Sep 2007; Jose Luis Rivero <yoswink@gentoo.org>
  librpcsecgss-0.16.ebuild:
  Stable on sparc wrt bug #191479

  09 Sep 2007; Markus Rothe <corsair@gentoo.org> librpcsecgss-0.16.ebuild:
  Stable on ppc64; bug #191479

  09 Sep 2007; Raúl Porcel <armin76@gentoo.org> librpcsecgss-0.16.ebuild:
  alpha/ia64 stable wrt security #191479

  09 Sep 2007; Christian Faulhammer <opfer@gentoo.org>
  librpcsecgss-0.16.ebuild:
  stable x86, security bug 191479

  08 Sep 2007; Steve Dibb <beandog@gentoo.org> librpcsecgss-0.16.ebuild:
  amd64 stable, security bug 191479

  07 Sep 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  librpcsecgss-0.16.ebuild:
  ppc stable, bug #191479

  07 Sep 2007; Jeroen Roovers <jer@gentoo.org> librpcsecgss-0.16.ebuild:
  Stable for HPPA (bug #191479).

*librpcsecgss-0.16 (06 Sep 2007)

  06 Sep 2007; Mike Frysinger <vapier@gentoo.org> +librpcsecgss-0.16.ebuild:
  Version bump #191479.

  21 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  librpcsecgss-0.14-r1.ebuild:
  Stable on amd64 wrt bug #167664.

  16 Mar 2007; nixnut <nixnut@gentoo.org> librpcsecgss-0.14-r1.ebuild:
  Stable on ppc wrt bug 167664

  23 Feb 2007; Markus Rothe <corsair@gentoo.org>
  librpcsecgss-0.14-r1.ebuild:
  Stable on ppc64; bug #167664

  23 Feb 2007; Christian Faulhammer <opfer@gentoo.org>
  librpcsecgss-0.14-r1.ebuild:
  stable x86; bug 167664
