@@ -1,6 +1,8 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/librpcsecgss/Attic/librpcsecgss-0.17.ebuild,v 1.1 2007/12/29 09:52:14 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/librpcsecgss/librpcsecgss-0.19-r1.ebuild,v 1.1 2010/07/27 10:02:30 flameeyes Exp $
+
+EAPI=2
 
 DESCRIPTION="implementation of rpcsec_gss (RFC 2203) for secure rpc communication"
 HOMEPAGE="http://www.citi.umich.edu/projects/nfsv4/linux/"
@@ -15,7 +17,14 @@ RDEPEND="net-libs/libgssglue"
 DEPEND="${RDEPEND}
 	dev-util/pkgconfig"
 
+src_configure() {
+	# No need to install static libraries, as it uses non-static dependencies
+	econf --disable-static
+}
+
 src_install() {
 	emake install DESTDIR="${D}" || die
+	find "${D}" -name '*.la' -delete || die
+
 	dodoc AUTHORS ChangeLog NEWS README
 }
